# anthos

./: .gitignore  LICENSE  Modelfile  README.md  build_phase2_dataset.py  build_phase3_dataset.py  chat_anthos.py  chat_native.py  clean_training_data.py  convert_conversation.py  deploy_from_runpod.py  download_stories.py  generate_claude_data.py  generate_identity_data.py  generate_tars_personality.py  generate_teacher_data.py  generate_teacher_labels.py  generate_vector.py  migrate_checkpoint.py  monitor_runpod.py  pyproject.toml  refine_manuals.py  runpod_setup.py  sae_train.py  setup_tokenizer.py  start_runpod_training.sh  train.py  train_anthos.py  train_local.py  train_on_runpod.py
anthos/: __init__.py  autonomous_agent.py  benchmark_suite.py  community.py  configs.py  data.py  data_pipeline.py  deploy.py  distill.py  distributed_grid.py  eaft.py  export.py  features.py  grpo.py  identity_hardening.py  knowledge_graph.py  kv_cache.py  lifelong_learning.py  lora_pairs.py  main.py  memory.py  memory_compress.py  model_surgery.py  moe_data.py  multipack.py  quant.py  sae.py  sasft.py  scalable_growth.py  self_destruct.py  self_improvement.py  serve.py  steering.py  stream_fineweb.py  train_additions.py
data/: anthos_conversation.txt  ethnic_stories.txt  identity_corrections.txt  persona_pairs.json
docs/: CONSTITUTION.md  INTEGRATION.md  MEMORY_INTEGRATION.md  TRAINING_ROADMAP.md  architecture.md
examples/: chat.py  minimal.py  train_small.py  variants.py
tests/: test_anthos.py
ui/: constitution-viewer.jsx
vectors/: .gitignore
(+7 files in other folders)
